--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <h1>
 <a name="linked-enterprise-models-and-objects-lemo" class="anchor" href="#linked-enterprise-models-and-objects-lemo"><span class="octicon octicon-link"></span></a>Linked Enterprise Models and Objects (LEMO)</h1>
 
-<p><em>An integrated way in enterprise modeling: Interlinking enterprise models and enterprise information objects.</em></p>
+<p><em>An integrated way in enterprise modelling: Interlinking enterprise models and enterprise information objects.</em></p>
 
 <h2>
 <a name="the-hsw-lemo-project" class="anchor" href="#the-hsw-lemo-project"><span class="octicon octicon-link"></span></a>The HSW-LEMO Project</h2>
