Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -33,7 +33,8 @@
         <h1>
 <a name="linked-enterprise-models-and-objects-lemo" class="anchor" href="#linked-enterprise-models-and-objects-lemo"><span class="octicon octicon-link"></span></a>Linked Enterprise Models and Objects (LEMO)</h1>
 
-<p><em>An integrated way in enterprise modelling: Interlinking enterprise models and enterprise information objects.</em></p>
+<p><em>An integrated way in enterprise modelling: Interlinking enterprise models and enterprise information objects.</em>
+<img src="https://raw.github.com/ikm-group/LEMO/gh-pages/images/lemo/0.png" alt="LEMO"></p>
 
 <h2>
 <a name="the-hsw-lemo-project" class="anchor" href="#the-hsw-lemo-project"><span class="octicon octicon-link"></span></a>The HSW-LEMO Project</h2>
@@ -46,7 +47,9 @@
 <li>The application scenario will be created during the creation of a real world enterprise architecture.</li>
 <li>The students are invited to create an enterprise architecture for the School of Business FHNW during research proposal phase.</li>
 <li>This gives a unique opportunity to put the enterprise architecture methodology into practice and have access to real world data. Apart from that, our experts in enterprise architecture (Knut Hinkelmann and others) will coach the students.</li>
-</ul><h2>
+</ul><p><img src="https://raw.github.com/ikm-group/LEMO/gh-pages/images/lemo/6.png" alt="LEMO"></p>
+
+<h2>
 <a name="background" class="anchor" href="#background"><span class="octicon octicon-link"></span></a>Background</h2>
 
 <h3>
@@ -57,12 +60,14 @@
 <h3>
 <a name="enterprise-models" class="anchor" href="#enterprise-models"><span class="octicon octicon-link"></span></a>Enterprise models</h3>
 
-<p>Enterprise models are an excellent way to explain, constrain, guide and predict things in a company. They contain valuable knowledge about the enterprise itself and provide adequate representations to different stakeholders. Good (enterprise) models are correct, relevant, economical efficient, clear, comparable and systematically designed (Becker et. al.). Enterprise models are a brilliant tool to understand what already exists in a company and what will be in future - that’s conversation by enterprise models. They do an excellent job when designing and shaping the future of an enterprise - guidance by enterprise models. And with the usage of enterprise models it is possible to verify and asses the current situation of the enterprise itself - that's compliance by enterprise models. </p>
+<p>Enterprise models are an excellent way to explain, constrain, guide and predict things in a company. They contain valuable knowledge about the enterprise itself and provide adequate representations to different stakeholders. Good (enterprise) models are correct, relevant, economical efficient, clear, comparable and systematically designed (Becker et. al.). Enterprise models are a brilliant tool to understand what already exists in a company and what will be in future - that’s conversation by enterprise models. They do an excellent job when designing and shaping the future of an enterprise - guidance by enterprise models. And with the usage of enterprise models it is possible to verify and asses the current situation of the enterprise itself - that's compliance by enterprise models.
+<img src="https://raw.github.com/ikm-group/LEMO/gh-pages/images/lemo/1.png" alt="LEMO"></p>
 
 <h3>
 <a name="linked-enterprise-models" class="anchor" href="#linked-enterprise-models"><span class="octicon octicon-link"></span></a>Linked enterprise models</h3>
 
-<p>Enterprise models can only fulfil these high expectations when they are made (1) explicit, (2) linked to other models and based on a (3) common shared understanding. To produce consistent, relevant and clear enterprise models they have to be made explicit. Otherwise "[…] you are making assumptions about any […] model that you have not made explicit and those assumptions may be right… or they may be wrong" (John A. Zachman, 2012). Consistent enterprise models can't exist in an isolated manner - the reality is not isolated. It is extremely rarely the case that a business process model has no relationship to an information model, document model or an organisational chart. It is obvious that enterprise models are linked at least implicitly even they not build using the same modelling language. In essence, enterprise modelling should be about people, audiences and divisions talking to each other. To achieve this, people need a common shared understanding about the enterprise. They need to speak the same "language" using a common vocabulary. As a result, enterprise models should contain and reuse the enterprise specific common vocabulary.</p>
+<p>Enterprise models can only fulfil these high expectations when they are made (1) explicit, (2) linked to other models and based on a (3) common shared understanding. To produce consistent, relevant and clear enterprise models they have to be made explicit. Otherwise "[…] you are making assumptions about any […] model that you have not made explicit and those assumptions may be right… or they may be wrong" (John A. Zachman, 2012). Consistent enterprise models can't exist in an isolated manner - the reality is not isolated. It is extremely rarely the case that a business process model has no relationship to an information model, document model or an organisational chart. It is obvious that enterprise models are linked at least implicitly even they not build using the same modelling language. In essence, enterprise modelling should be about people, audiences and divisions talking to each other. To achieve this, people need a common shared understanding about the enterprise. They need to speak the same "language" using a common vocabulary. As a result, enterprise models should contain and reuse the enterprise specific common vocabulary.
+<img src="https://raw.github.com/ikm-group/LEMO/gh-pages/images/lemo/2.png" alt="LEMO"></p>
 
 <h3>
 <a name="why-are-linked-enterprise-models-important-to-business" class="anchor" href="#why-are-linked-enterprise-models-important-to-business"><span class="octicon octicon-link"></span></a>Why are linked enterprise models important to business?</h3>
@@ -87,7 +92,8 @@
 </ul><h3>
 <a name="linked-enterprise-models--enterprise-ontologies" class="anchor" href="#linked-enterprise-models--enterprise-ontologies"><span class="octicon octicon-link"></span></a>Linked Enterprise Models &amp; Enterprise Ontologies</h3>
 
-<p>“The main purpose of an enterprise ontology is to promote the common understanding between people across enterprises, as well as to serve as a communication medium between people and applications, and between different applications” [35, p. 273].</p>
+<p>“The main purpose of an enterprise ontology is to promote the common understanding between people across enterprises, as well as to serve as a communication medium between people and applications, and between different applications” [35, p. 273].
+<img src="https://raw.github.com/ikm-group/LEMO/gh-pages/images/lemo/3.png" alt="LEMO"></p>
 
 <h3>
 <a name="linked-enterprise-models--enterprise-ontologies-including-enterprise-architectures" class="anchor" href="#linked-enterprise-models--enterprise-ontologies-including-enterprise-architectures"><span class="octicon octicon-link"></span></a>Linked Enterprise Models &amp; Enterprise Ontologies including Enterprise Architectures</h3>
@@ -96,7 +102,9 @@
 <li>“Enterprise Architectures (AE) are a way to model the relevant aspects of an enterprise and interdependencies between business and information systems” (Martin et. al., 2013).</li>
 <li>According to Zachman, an Enterprise Architecture Framework is an ontology and a “structured set of essential components of an object for which explicit expressions is necessary and perhaps even mandatory for creating, operating, and changing the object […]” (Zachman, 2008) e.g. an enterprise.</li>
 <li>The Zachman Framework is not formalized in an ontology representation language till now – but it should be. The FHNW has introduced a formalized enterprise ontology called ArchiMEO, which is based on enterprise architecture framework ArchiMate.</li>
-</ul><h2>
+</ul><p><img src="https://raw.github.com/ikm-group/LEMO/gh-pages/images/lemo/4.png" alt="LEMO"></p>
+
+<h2>
 <a name="application" class="anchor" href="#application"><span class="octicon octicon-link"></span></a>Application</h2>
 
 <h3>
