--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
 <li>Model efficiency: “Does your enterprise work as expected?”</li>
 </ul>
 </li>
-</ul>
+</ul><p><img src="https://raw.github.com/ikm-group/LEMO/gh-pages/images/lemo/5.png" alt="LEMO"></p>
       </section>
       <footer>
         <p><small>Hosted on <a href="http://pages.github.com">GitHub Pages</a> using the Dinky theme</small></p>
