--- a/index.html
+++ b/index.html
@@ -47,7 +47,9 @@
 <li>The application scenario will be created during the creation of a real world enterprise architecture.</li>
 <li>The students are invited to create an enterprise architecture for the School of Business FHNW during research proposal phase.</li>
 <li>This gives a unique opportunity to put the enterprise architecture methodology into practice and have access to real world data. Apart from that, our experts in enterprise architecture (Knut Hinkelmann and others) will coach the students.</li>
-</ul><h2>
+</ul>
+<script async class="speakerdeck-embed" data-slide="14" data-id="af53ca705873013149f066d2f27aad89" data-ratio="1.33333333333333" src="//speakerdeck.com/assets/embed.js"></script>
+<h2>
 <a name="background" class="anchor" href="#background"><span class="octicon octicon-link"></span></a>Background</h2>
 
 <h3>
