--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
         <p class="header">Linked Enterprise Models and Objects (LEMO)</p>
 
         <ul>
-          <li class="download"><a class="buttons" href="https://github.com/ikm-group/LEMO/zipball/master">Download ZIP</a></li>
-          <li class="download"><a class="buttons" href="https://github.com/ikm-group/LEMO/tarball/master">Download TAR</a></li>
+          <!--<li class="download"><a class="buttons" href="https://github.com/ikm-group/LEMO/zipball/master">Download ZIP</a></li>
+          <li class="download"><a class="buttons" href="https://github.com/ikm-group/LEMO/tarball/master">Download TAR</a></li>-->
           <li><a class="buttons github" href="https://github.com/ikm-group/LEMO">View On GitHub</a></li>
         </ul>
 
