Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
         <p class="header">Linked Enterprise Models and Objects (LEMO)</p>
 
         <ul>
-          <!--<li class="download"><a class="buttons" href="https://github.com/ikm-group/LEMO/zipball/master">Download ZIP</a></li>
-          <li class="download"><a class="buttons" href="https://github.com/ikm-group/LEMO/tarball/master">Download TAR</a></li>-->
+          <li class="download"><a class="buttons" href="https://github.com/ikm-group/LEMO/zipball/master">Download ZIP</a></li>
+          <li class="download"><a class="buttons" href="https://github.com/ikm-group/LEMO/tarball/master">Download TAR</a></li>
           <li><a class="buttons github" href="https://github.com/ikm-group/LEMO">View On GitHub</a></li>
         </ul>
 
@@ -36,8 +36,14 @@
 <p><em>An integrated way in enterprise modelling: Interlinking enterprise models and enterprise information objects.</em>
 <img src="https://raw.github.com/ikm-group/LEMO/gh-pages/images/lemo/0.png" alt="LEMO"></p>
 
+<blockquote>
+<p>This is a proposal for a student project at the School of Business of the University of Applied Sciences Northwestern Switzerland FHNW. <strong>Important: The following content has a hypothetical character and will be evaluated within several master theses.</strong></p>
+</blockquote>
+
 <h2>
 <a name="the-hsw-lemo-project" class="anchor" href="#the-hsw-lemo-project"><span class="octicon octicon-link"></span></a>The HSW-LEMO Project</h2>
+
+<p><em>HSW (School of Business FHNW)-LEMO (Linked Enterprise Models and Objects)-Project</em></p>
 
 <ul>
 <li>The goal of this joint research project is to evaluate the hypothesis of “Linked Enterprise Models and Objects (LEMO)”.</li>
@@ -47,9 +53,16 @@
 <li>The application scenario will be created during the creation of a real world enterprise architecture.</li>
 <li>The students are invited to create an enterprise architecture for the School of Business FHNW during research proposal phase.</li>
 <li>This gives a unique opportunity to put the enterprise architecture methodology into practice and have access to real world data. Apart from that, our experts in enterprise architecture (Knut Hinkelmann and others) will coach the students.</li>
-</ul>
-<script async class="speakerdeck-embed" data-slide="14" data-id="af53ca705873013149f066d2f27aad89" data-ratio="1.33333333333333" src="//speakerdeck.com/assets/embed.js"></script>
-<h2>
+</ul><p>Students of the Master of Science in Business Information Systems programme of the University of Applied Sciences Northwestern Switzerland FHNW can choose the following research topics:</p>
+
+<ol>
+<li><a href="http://www.fhnw.ch/business/msc-bis/research-and-development/proposals-master-theses/ss-2014/an-integrated-way-in-enterprise-modelling-lemo-method">LEMO Method: Design a new generalized, step-wised an iterative method for enterprise modelling</a></li>
+<li><a href="http://www.fhnw.ch/business/msc-bis/research-and-development/proposals-master-theses/ss-2014/an-integrated-way-in-enterprise-modelling-lemo-cycle">LEMO Cycle: Introduce an innovative cyclic roundtrip approach, which enables to keep enterprise models with an enterprise ontology in-sync</a></li>
+<li><a href="http://www.fhnw.ch/business/msc-bis/research-and-development/proposals-master-theses/ss-2014/an-integrated-way-in-enterprise-modelling-lemo-incorporation">LEMO Incorporation: Work on John Zachman’s vision of an Enterprise Ontology - interlink and formalize Enterprise Architecture Frameworks</a></li>
+<li><a href="http://www.fhnw.ch/business/msc-bis/research-and-development/proposals-master-theses/ss-2014/an-integrated-way-in-enterprise-modelling-lemo-cockpit">LEMO Cockpit: Develop an enterprise cockpit presenting the telemetry of an enterprise</a></li>
+<li><a href="http://www.fhnw.ch/business/msc-bis/research-and-development/proposals-master-theses/ss-2014/an-integrated-way-in-enterprise-modelling-lemo-browser">LEMO Browser: Cognitively adequate visual representation of an enterprise ontology that enables domain experts, modelling experts and ontology engineers to get a quick overview of the enterprise vocabulary and existing models</a></li>
+<li><a href="http://www.fhnw.ch/business/msc-bis/research-and-development/proposals-master-theses/ss-2014/an-integrated-way-in-enterprise-modelling-lemo-integration-and-change">LEMO Integration and Change: Enrich enterprise IT with semantic information of an enterprise ontology using a mediator based integration scenario</a></li>
+</ol><h2>
 <a name="background" class="anchor" href="#background"><span class="octicon octicon-link"></span></a>Background</h2>
 
 <h3>
