--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
         <p class="header">Linked Enterprise Models and Objects (LEMO)</p>
 
         <ul>
-          <li class="download"><a class="buttons" href="https://github.com/ikm-group/LEMO/zipball/master">Download ZIP</a></li>
-          <li class="download"><a class="buttons" href="https://github.com/ikm-group/LEMO/tarball/master">Download TAR</a></li>
+          <!--<li class="download"><a class="buttons" href="https://github.com/ikm-group/LEMO/zipball/master">Download ZIP</a></li>
+          <li class="download"><a class="buttons" href="https://github.com/ikm-group/LEMO/tarball/master">Download TAR</a></li>-->
           <li><a class="buttons github" href="https://github.com/ikm-group/LEMO">View On GitHub</a></li>
         </ul>
 
@@ -53,6 +53,9 @@
 <li>The application scenario will be created during the creation of a real world enterprise architecture.</li>
 <li>The students are invited to create an enterprise architecture for the School of Business FHNW during research proposal phase.</li>
 <li>This gives a unique opportunity to put the enterprise architecture methodology into practice and have access to real world data. Apart from that, our experts in enterprise architecture (Knut Hinkelmann and others) will coach the students.</li>
+</ul>
+<script async class="speakerdeck-embed" data-slide="14" data-id="af53ca705873013149f066d2f27aad89" data-ratio="1.33333333333333" src="//speakerdeck.com/assets/embed.js"></script>
+<h2>
 </ul><p>Students of the Master of Science in Business Information Systems programme of the University of Applied Sciences Northwestern Switzerland FHNW can choose the following research topics:</p>
 
 <ol>
