--- a/index.html
+++ b/index.html
@@ -55,8 +55,8 @@
 <li>This gives a unique opportunity to put the enterprise architecture methodology into practice and have access to real world data. Apart from that, our experts in enterprise architecture (Knut Hinkelmann and others) will coach the students.</li>
 </ul>
 <script async class="speakerdeck-embed" data-slide="14" data-id="af53ca705873013149f066d2f27aad89" data-ratio="1.33333333333333" src="//speakerdeck.com/assets/embed.js"></script>
-<h2>
-</ul><p>Students of the Master of Science in Business Information Systems programme of the University of Applied Sciences Northwestern Switzerland FHNW can choose the following research topics:</p>
+
+<p>Students of the Master of Science in Business Information Systems programme of the University of Applied Sciences Northwestern Switzerland FHNW can choose the following research topics:</p>
 
 <ol>
 <li><a href="http://www.fhnw.ch/business/msc-bis/research-and-development/proposals-master-theses/ss-2014/an-integrated-way-in-enterprise-modelling-lemo-method">LEMO Method: Design a new generalized, step-wised an iterative method for enterprise modelling</a></li>
